--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,8 @@
     "license": "proprietary",
     "authors": [
         {
-            "name": "Mage2Gen",
-            "email": "info@mage2gen.com"
-        },
-        {
             "name": "Durga Shankar Gupta",
-            "email": "durgashankar.gupta@javra.com"
+            "email": "dsguptas@gmail.com"
         }
     ],
     "minimum-stability": "dev",
